# can-viewer

./: Cargo.toml  README.md  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: main.rs
src/can_chart/: chart.rs  mod.rs
src/event_handler/: can_handler.rs  dbc_file.rs  debug.rs  filter.rs  init.rs  mod.rs  packet_filter.rs  view.rs
ui/: app.slint  chart_page.slint  debug_page.slint  filter_page.slint  init_page.slint  messages.slint  page_selection.slint  view_page.slint
