[package]
name = "can-viewer"
version = "0.1.0"
edition = "2021"
description = "view real-time CAN packages"

[dependencies]
can-dbc = { git="https://github.com/TuEmb/can-dbc.git", branch="dev" }
rfd = "0.14.1"
slint = { version = "1.7.1", default-features = false, features = ["backend-winit", "compat-1-2", "renderer-winit-femtovg"] }

[target.'cfg(windows)'.dependencies]
embedded-can = "0.3.0"
pcan-basic = { git = "https://github.com/TuEmb/pcan-basic-rs.git", branch="master"}

[target.'cfg(unix)'.dependencies]
dialoguer = "0.11.0"
socketcan = { git = "https://github.com/socketcan-rs/socketcan-rs.git", rev="e0d7760eca8085b247f37ea22f0aa41e00fa25fa", features = ["enumerate"] }

[build-dependencies]
slint-build = "1.7.1"

[package.metadata.bundle]
name = "can-viewer"
icon = ["ui/images/can_viewer_32px.png", "ui/images/can_viewer_128px.png", "ui/images/can_viewer_256px.png"]
version = "1.0.0"
copyright = "Copyright (c) Tu Nguyen 2024. All rights reserved."
category = "Developer Tool"
short_description = "view real-time CAN packages"
long_description = """
can-viewer is developed by https://github.com/TuEmb, using Rust and Slint.
can-view can records real-time can packages and parse data with DBC input.
"""